fix: remove unnecessary scrollbar on homepage

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 70px);
+    min-height: calc(100vh - 70px);
     text-align: center;
 }
 
